# dinov3_ros

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  NOTICE.md  README.md  docker-compose.yaml  requirements.txt  setup.py
dinov3_toolkit/head_depth/: model_head.py  utils.py
dinov3_toolkit/head_depth/weights/: model.pth
dinov3_toolkit/head_detection/: inference.py  model_head.py  utils.py
dinov3_toolkit/head_segmentation/: model_head_light.py
dinov3_toolkit/head_segmentation/weights/: model_light.pth
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/dinov3_bringup/lib/dinov3_bringup/: dinov3_node
ros2_ws/install/dinov3_bringup/share/dinov3_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/dinov3_bringup/share/dinov3_bringup/config/: params.yaml
ros2_ws/install/dinov3_bringup/share/dinov3_bringup/launch/: dinov3.launch.py
ros2_ws/install/dinov3_ros/lib/dinov3_ros/: dinov3_node
ros2_ws/install/dinov3_ros/share/dinov3_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/dinov3_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/dinov3_bringup/config/: params.yaml
ros2_ws/src/dinov3_bringup/launch/: dinov3.launch.py
ros2_ws/src/dinov3_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/dinov3_ros/dinov3_ros/: dinov3_node.py
ros2_ws/src/dinov3_ros/dinov3_ros/utils/: depth_utils.py  detection_utils.py
