<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dinov3_ros</name>
  <version>1.0.0</version>
  <description>Package that use dinov3 as a backbone and light heads to perform computer vision tasks</description>
  <maintainer email="raessan@outlook.com">Rafael Escarabajal</maintainer>
  <license>Apache-2.0</license>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
